plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'io.github.jaymcole'
version = '0.1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21.0.4'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'io.github.jaymcole.housegraph.Launcher'
}

dependencies {
    implementation 'org.json:json:20231013'
    implementation('net.dv8tion:JDA:5.2.1') {
        exclude module: 'opus-java' // no voice — drop the native audio dependency
    }
    implementation 'org.slf4j:slf4j-simple:2.0.13'

    testImplementation platform('org.junit:junit-bom:5.10.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

javadoc {
    // Keep the doclint checks that catch real mistakes (broken @link references, bad HTML,
    // syntax), but drop the "missing" group: this codebase documents at the class level and
    // deliberately leaves trivial getters/setters, abstract stubs, and record boilerplate
    // uncommented. Records and key public API still carry @param/@return where it adds value.
    options.addStringOption('Xdoclint:all,-missing', '-quiet')
}
